# splinterdb

./: .gitignore  CMakeLists.txt
examples/: splinterdb_intro_example.c
include/splinterdb/: public_platform.h
src/: splinterdb.c  task.c
src/platform_linux/: laio.c  platform.c
